# vllm-serving

./: .gitignore  InternVL3_5-14B.bash  InternVL3_5-30B-A3-GGUF.bash  InternVL3_5-30B-A3.bash  MiniCPM-V-4_5.bash  NVIDIA Nemotron-Nano-12B-v2.md  NVIDIA-Nemotron-Nano-12B-v2-gguf.bash  NVIDIA-Nemotron-Nano-12B-v2.bash  QWEN3_EMBEDDING.md  QWEN3_VL_EMBEDDING.md  Qwen3-30B-A3B-Instruct-2507-gguf.bash  Qwen3-30B-A3B-Thinking-2507-gguf.bash  Qwen3-30B-A3B-Thinking-2507.bash  Qwen3-Next-80B-A3B-Instruct.bash  Qwen3-VL-30B-A3B-Instruct-AWQ.bash  Qwen3-VL-30B-A3B-Thinking-AWQ.bash  Qwen3-VL-4B-Instruct-AWQ.bash  Qwen3-VL-8B-Instruct-AWQ.bash  Qwen3.5-27B-AWQ.bash  Qwen3.5-35B-A3B-AWQ.bash  README.md  SERVE_CLI.md  SERVE_OPTIMIZE_PROMPT.md  deepseek-r1-distill-qwen-32b-awq.bash  glm-4.1v-9b-thinking-awq.bash  glm-4.5-awq.bash  glm-4.5-nothink.jinja  internvl3-8b-hf-traffic-accident-awq.bash  internvl3-8b-hf-traffic-accident.bash  litellm_config.yaml  main.py  pyproject.toml  qwen2_5_vl_32b_awq.bash  qwen2_5_vl_72b_awq.bash  start_multiple.sh  test.ipynb
GLM-4.5/: glm-4.5-awq.bash
Granite-4.0/: granite-4.0-h-tiny-AWQ-4bit.bash
InternVL3_5/: InternVL3_5-30B-A3-GGUF.bash
MiniCPM-V-4.5/: MiniCPM-V-4_5.bash
NVIDIA-Nemotron-Nano/: NVIDIA-Nemotron-Nano-12B-v2-gguf.bash  NVIDIA-Nemotron-Nano-12B-v2.bash
Qwen3/: Qwen3-30B-A3B-Instruct-2507-gguf.bash  Qwen3-30B-A3B-Thinking-2507.bash  qwen3_72b_awq.bash
Qwen3-Embedding/: QWEN3_EMBEDDING.md
Qwen3-VL/: Qwen3-VL-2B-Instruct-AWQ.bash  Qwen3-VL-4B-Instruct-AWQ.bash  Qwen3-VL-8B-Instruct-AWQ.bash
Qwen3-VL-Embedding/: QWEN3_VL_EMBEDDING.md
Qwen3.5/: Qwen3.5-27B-AWQ.bash  Qwen3.5-27B-AutoRound.bash  Qwen3.5-27B-AutoRound.md  Qwen3.5-9B-AutoRound.bash  Qwen3.5-9B-AutoRound.md
docs/: SERVE_OPTIMIZE.md
