[project]
name = "vllm-serving"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "accelerate>=1.6.0",
    "qwen-vl-utils[decord]==0.0.14",
    "setuptools>=80.0.0",
    "torch==2.8.0",
    "torchvision==0.23.0",
    "setuptools-scm>=8.3.1",
    "vllm>=0.11.0",
    "triton>=3.3.1",
    "transformers==4.57.0",
    "nvidia-ml-py>=13.580.82",
    "flash-attn>=2.8.3",
]

[tool.uv]
environments = [
    "sys_platform == 'linux'",
]
no-build-isolation = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-cu126", marker = "sys_platform == 'linux'" },
]
torchvision = [
  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-cu126", marker = "sys_platform == 'linux'" },
]
onnx-graphsurgeon = { index = "nvidia"}
flash-attn = { url = "https://github.com/Dao-AILab/flash-attention/releases/download/v2.8.3/flash_attn-2.8.3+cu12torch2.8cxx11abiTRUE-cp310-cp310-linux_x86_64.whl" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[[tool.uv.index]]
name = "nvidia"
url = "https://pypi.ngc.nvidia.com"
explicit = true

[dependency-groups]
dev = [
    "flashinfer-python>=0.3.1",
]
