[project]
name = "vllm-serving"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "accelerate>=1.6.0",
    "qwen-vl-utils[decord]==0.0.14",
    "setuptools>=80.0.0",
    "torch==2.10.0",
    "torchvision",
    "setuptools-scm>=8.3.1",
    "transformers==5.3.0.dev0",
    "flashinfer-python==0.6.4",
    "litellm[proxy]>=1.81.16",
    "triton>=3.2.0",
    "flash-attn",
]

[tool.uv]
environments = [
    "sys_platform == 'linux'",
]
no-build-isolation = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]
torchvision = [
  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]
onnx-graphsurgeon = { index = "nvidia"}
transformers = { git = "https://github.com/huggingface/transformers" }
flash-attn = { git = "https://github.com/Dao-AILab/flash-attention.git" }

[[tool.uv.index]]
url = "https://wheels.vllm.ai/nightly/cu128"

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "nvidia"
url = "https://pypi.ngc.nvidia.com"
explicit = true

[dependency-groups]
dev = []
